fix buttons alignment on narrow screens

--- a/src/app/components/result/result.component.css
+++ b/src/app/components/result/result.component.css
@@ -1,7 +1,7 @@
 .result {
   border-radius: 5px;
   width     : 100%;
-  padding   : 2em;
+  padding   : 1rem;
   color     : black;
   margin-bottom: 20px;
 }
@@ -20,7 +20,8 @@
 }
 
 .search {
-  flex: 1
+  flex: 1;
+  min-width: 300px;
 }
 
 .nav-link.active.all {
@@ -37,51 +38,27 @@
   bottom: 0;
 }
 
-.btn-collapsible {
-  overflow: hidden;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -ms-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-  max-width: 40px;
+.result.container > div:first-child {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.btn-collapsible.btn-xs {
-  max-width: 25px;
+
+.actions-btn {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
 }
-.btn-collapsible.btn-sm {
-  max-width: 34px;
+
+.filters {
+  display: flex;
+  flex-wrap: wrap;
 }
-.btn-collapsible.btn-lg {
-  max-width: 50px;
+
+.filters > * {
+  margin-top: 1rem;
 }
-.btn-collapsible span {
-  opacity: 0;
-  text-indent: -6px;
-  display: inline-block;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -ms-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
-.btn-collapsible:hover {
-  max-width: 300px;
-  -webkit-transition: all 300ms ease-in-out;
-  -moz-transition: all 300ms ease-in-out;
-  -ms-transition: all 300ms ease-in-out;
-  -o-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-.btn-collapsible:hover span {
-  opacity: 1;
-  text-indent: 0px;
-  -webkit-transition: all 300ms ease-in-out;
-  -moz-transition: all 300ms ease-in-out;
-  -ms-transition: all 300ms ease-in-out;
-  -o-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
+
 
 .result section h3.INFO::before,
 .result section .entry.INFO::before {
@@ -235,5 +212,25 @@
 
   .result section > div {
     padding-left: 20px;
+  }
+
+  .actions-btn > div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .actions-btn > div > a {
+    flex-grow: 1;
+  }
+}
+
+@media(max-width:992px) {
+  .filters > ul {
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
